--- a/mobil_layout1.css
+++ b/mobil_layout1.css
@@ -1,7 +1,13 @@
+html { scroll-behavior: smooth; }
+* {
+    box-sizing: border-box;
+  }
+
 body{ 
     background-color: #DDDDDD;
     padding: 5% 10%;
     font-family: Georgia, serif;
+    margin: auto;
 
 }
 
@@ -21,18 +27,20 @@ h1{
     
 
 }
-h2 {
-    text-transform: capitalize;
-    font-style: italic;
-    font-size: 35px;
-  }
 
 
 main {
-    padding: 10px 10%;
-    margin: 35px 0;
+    padding: 1px 1%;
+    margin: 25px 0;
     box-shadow: 3px 4px 20px #363636;
     background-color: #FFFFFF;
+    max-width: 900px;
+    margin: auto;
+    box-shadow: 30px 0px 40px rgba(0,0,0,1), 
+    -30px 0px 40px rgba(0,0,0,0.1);
+ 
+   
+     
 
 }
 
@@ -41,44 +49,60 @@ p{
     text-align: justify;
     text-indent: 1em;
     font-size: 30px;
-    
+   
 }
 
 .bilde-boks{
+    max-width: 70ch;
+    margin: 1rem auto;
+    padding: 2 2rem;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+      
+  
 
 }
 .bilde-boks img{
     width: 40%;
-    width: min(100%, 40rem);
-  width: clamp(1px, 100%, 35rem);
-  display: block;
-  filter: saturate(0.3);
-  
+    
+   
+    
     
 }
 .bilde-boks figcaption{
-   
+    
+    font-size: 1.5rem;
+    padding: 0.8rem;
+    margin-top: 0%;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    right: 0;
+    transform: translateY(-200%);
+    
+
     
 }
 
-
-    /*-------*/
-    /* BOX 1 */
-    /*-------*/
-
-
 #box1{
     display: inline-block;
+    
 
 }
 
 #box1 p {
     display: inline;
+
   
   }
 #box1 img {
     margin-right: 1em;
     float: left;
+    height: 250px;
+    width: 250px;
+
 }
 
 
@@ -94,6 +118,8 @@ p{
 #box2 img {
     margin-right: 1em;
     float: left;
+    height: 200px;
+    width: 200px;
 }
 #box3{
     display: inline-block;
@@ -107,23 +133,62 @@ p{
 #box3 img {
     margin-right: 1em;
     float: left;
+    height: 200px;
+    width: 200px;
+}
+#box4{
+    display: inline-block;
+
 }
 
-footer{
+#box4 p {
+    display: inline;
+  
+  }
+#box4 img {
+    margin-right: 1em;
+    float: left;
+}
+#box5{
+    display: inline-block;
 
 }
 
-footer > p{
-    
+#box5 p {
+    display: inline;
+  
+  }
+#box5 img {
+    margin-right: 1em;
+    float: left;
 }
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="col-"] {
-      width: 100%;
+#box6{
+    display: inline-block;
+
+}
+
+#box6 p {
+    display: inline;
+  
+  }
+#box6 img {
+    margin-right: 1em;
+    float: left;
+}
+
+
+@media  (min-width: 700px) {
+    {
+
     }
 }
 
 
 
 
+@media  (min-width: 700px) {
+    {
+
+    }
+}
 
