--- a/PC_layout1.css
+++ b/PC_layout1.css
@@ -1,13 +1,25 @@
 body{
-
+    background-color:rgba(255, 255, 0, 0.336);
+    font-family: Georgia, serif;
+    margin: 0;
 }
 
-header{
-
+h1, h2{
+    letter-spacing: 0.2em;
+    font-family: Arial, sans-serif;
 }
 
 h1{
+    text-transform: uppercase;
+    text-shadow: 5px 5px 5px #afa958;
+    text-align: center;
+    font-size: 5rem;
 
+}
+
+h2{
+    text-transform: capitalize;
+    font-style: italic;
 }
 
 
@@ -16,16 +28,6 @@ main {
 }
 
 p{
-    
-}
-
-.bilde-boks{
-
-}
-.bilde-boks img{
-    
-}
-.bilde-boks figcaption{
     
 }
 
