--- a/mobil_layout1 copy 2.css
+++ b/mobil_layout1 copy 2.css
@@ -1,10 +1,12 @@
-** {
+* {
   margin: 0;
+  padding: 0;
+  border: 0;
   box-sizing: border-box;
 }
 
 body {
-
+  
   background-color: tan;
   font-family: Arial, Helvetica, sans-serif
 }
@@ -60,59 +62,14 @@ footer {
   flex: 1 0 ;
 }
 
-
-body {
-  
-  background-color: tan;
-  font-family: Arial, Helvetica, sans-serif
-}
-.container{
-
-  margin:  auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center ;
-
-}
-
 /*Tablet styles*/
-@media(max-width:1080px) {
+@media (max-width:1080px) {
   .container {
     flex-direction: column;
   }
 }
 
-
-h1 {
-  text-transform: uppercase;
-  text-shadow: 5px 5px 5px #af5858;
-  text-align: center;
-  font-size: 7rem;
-}
-h2 {
-  text-transform: capitalize;
-  font-style: italic;
-}
-
-
-.boks-tekst{
-  width: 100%;
-  height: auto;
-  margin: 5px;
-  float: left;
-  width: 600px;
-}
-
-
+/*phone*/
 @media (max-width:400px) {
- 
-  #box4 {
-    display: block;
-  }
-  .main {
-    flex-direction: column;
-    
-    position: relative;
-  }
-
+  
 }
