--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,12 +5,11 @@ body{
   margin: 0;
   background-color: rgba(170, 170, 89, 0.336);
   text-align: center;
-  font-family: 'Times New Roman', Times, serif;
+  font-family:sans-serif,serif;
 }
 
 h1{
   text-align: center;
-  text-shadow: white;
   text-transform: uppercase;
   text-align: center;
   font-size: 3rem;
@@ -37,7 +36,7 @@ h2 {
 .boks{
   margin: 5px;
   border: 1px solid #ccc;
-  width: 290px;
+  width: 288px;
   text-align: center;
 
 }
@@ -56,7 +55,7 @@ h2 {
 
 footer{
   padding: 10px;
-  font-size: 17px;
+  font-size: 10px;
   font-weight: bold;
   text-align: center;
   background-color: #b6a5a5;
@@ -70,11 +69,9 @@ footer{
     text-align: center;
   }  
 }
-@media (min-width:1080px){
+@media (min-width:1000px){
   h1{
     font-size: 4rem;
-    text-shadow: black;
-    border-bottom:7px solid rgb(59, 47, 47);
     text-transform: capitalize;
     
 
@@ -88,8 +85,11 @@ footer{
     text-transform: capitalize;
   }
 
-  .boks-tekst p{
-   font-style: normal;
+   p{
+   font-style:italic;
+
+
+  
   }
   
 }
